--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
-  "home": "http://todoreact.github.io/public"
+  "home": "http://todoreact.github.io/public",
   "dependencies": {
     "lodash": "^4.17.5",
     "react": "^16.2.0",
